03.kubernetes/ingress-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-1-service
spec:
  type: NodePort
  selector:
    app: demo-1-label
  ports:
    - protocol: TCP # 將 container 3000 port 轉到 80 port
      port: 80
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: demo-2-service
spec:
  type: NodePort
  selector:
    app: demo-2-label
  ports:
    - protocol: TCP # 將 container 3000 port 轉到 80 port
      port: 80
      targetPort: 3000
